--- a/Errands/Views/Register.cshtml
+++ b/Errands/Views/Register.cshtml
@@ -1,7 +1,57 @@
-﻿
+﻿@model Errands.Models.ViewModels.RegisterViewModel
+
 @{
     ViewData["Title"] = "Register";
+    Layout = "_layout";
 }
+<head>
 
-<h1>Register</h1>
+    <title>Register</title>
+    <link rel="stylesheet" href="~/css/Reset.css" />
+    <link rel="stylesheet" href="~/css/Layout.css" />
+
+</head>
+<h1>Register!</h1>
+
+<form method="post">
+
+    <div asp-validation-summary="All" class="Text-danger"></div>
+    <div class="FormElements">
+        <label asp-for="Email"></label>
+        <input asp-for="Email" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+
+        <label asp-for="FirstName"></label>
+        <input asp-for="FirstName" />
+        <span asp-validation-for="FirstName" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+        <label asp-for="LastName"></label>
+        <input asp-for="LastName" />
+        <span asp-validation-for="LastName" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+        <label asp-for="Birthday"></label>
+        <input asp-for="Birthday" />
+        <span asp-validation-for="Birthday" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+        <label asp-for="ConfirmPassword"></label>
+        <input asp-for="ConfirmPassword" />
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
+    <div class="FormElements">
+        <label asp-for="LoveAnimals"></label>
+        @Html.CheckBox("LoveAnimals", "True")
+        <span asp-validation-for="LoveAnimals" class="text-danger"></span>
+    </div>
+    <button type="submit" value="Register">Register User</button>
+</form>
 
